layout page and some config routes are been managed

--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -1,20 +1,16 @@
-<div class="container-fluid page">
-    <div class="page-content shadow p-3 position-relation">
-        <div class="page-content-data position-absolute text-center">
-            <div class="">
-                <h1>Want to edit your details?</h1>
-                <a type="button" class="btn btn-outline-primary" routerLink="/edit">Click here</a>
-            </div>
-            <div class="divider"><hr></div>
-            <div class="">
-                <h1>Want to modify your details?</h1>
-                <a type="button" class="btn btn-outline-secondary" routerLink="/manage">Click here</a>
-            </div>
-            <div class="divider"><hr></div>
-            <div class="">
-                <h1>Want to cancel your booking?</h1>
-                <a type="button" class="btn btn-outline-danger" routerLink="/delete">Click here</a>
-            </div>
-        </div>
+<div class="page-content-data position-absolute text-center">
+    <div class="">
+        <h1>Want to edit your details?</h1>
+        <a type="button" class="btn btn-outline-primary" routerLink="edit">Click here</a>
+    </div>
+    <div class="divider"><hr></div>
+    <div class="">
+        <h1>Want to modify your details?</h1>
+        <a type="button" class="btn btn-outline-secondary" routerLink="manage">Click here</a>
+    </div>
+    <div class="divider"><hr></div>
+    <div class="">
+        <h1>Want to cancel your booking?</h1>
+        <a type="button" class="btn btn-outline-danger" routerLink="delete">Click here</a>
     </div>
 </div>
