--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,1 @@
-<div class="container-fluid page">
-    <div class="page-content shadow p-3 position-relation">
-        <div class="page-content-data position-absolute text-center">
-            Dashboard Content
-        </div>
-    </div>
-</div>
+<p>dashboard work!</p>
