--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <mat-toolbar-row class="shadow justify-content-between">
+    <mat-toolbar-row class="justify-content-between">
         <h1>Travel Go</h1>
 
          <div class="row mr-2 ml-auto">
