--- a/src/app/component/signup/account-details/account-details.component.html
+++ b/src/app/component/signup/account-details/account-details.component.html
@@ -1,2 +1,4 @@
-<p>account-details works!</p>
-<button class="btn btn-primary" routerLink="/login" >account details</button>
+<p>account-details work!</p>
+<div>
+<button class="btn btn-outline-primary" routerLink="/login">login</button>
+</div>
